# pdf-scan-organizer

./: .gitignore  README.md  config.example.toml  pdf_scan_organizer.py  pyproject.toml
